--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@asteasolutions/zod-to-openapi": "^7.0.0",
     "@aws-sdk/client-dynamodb": "^3.656.0",
     "@aws-sdk/lib-dynamodb": "^3.656.0",
+    "@aws-sdk/util-dynamodb": "^3.662.0",
     "aws-sdk": "^2.1691.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
