Update node.js.yml - run: pm2 restart BackendAPI

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,3 +32,4 @@ jobs:
         echo "${{ secrets.PROD_ENV_FILE }}" > .env
       shell: bash
     - run: npm run build
+    - run: pm2 restart BackendAPI
