--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
     - run: npm ci
     - run: |
         touch .env
-        echo "${{ secrets.PROD_ENV_FILE }}" > .env
+        echo "${{ secrets.DEV_ENV_FILE }}" > .env
       shell: bash
     - run: npm run build
     - run: pm2 restart BackendAPI
