--- a/.github/workflows/prod-node.js.yml
+++ b/.github/workflows/prod-node.js.yml
@@ -28,6 +28,6 @@ jobs:
     - run: |
         touch .env
         echo "${{ secrets.PROD_ENV_FILE }}" > .env
-    #   shell: bash
-    # - run: npm run build
-    # - run: pm2 restart BackendAPI
+        shell: bash
+    - run: npm run build
+    - run: pm2 restart BackendAPI
