--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@asteasolutions/zod-to-openapi": "^7.0.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.670.0",
     "@aws-sdk/client-dynamodb": "^3.656.0",
+    "@aws-sdk/client-s3": "^3.682.0",
     "@aws-sdk/lib-dynamodb": "^3.656.0",
     "@aws-sdk/util-dynamodb": "^3.662.0",
     "aws-sdk": "^2.1691.0",
@@ -31,6 +32,8 @@
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "pino-http": "^10.0.0",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^10.0.0",
@@ -40,6 +43,8 @@
     "@biomejs/biome": "1.9.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
+    "@types/multer-s3": "^3.0.3",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "husky": "^9.0.11",
