--- a/.env.prod
+++ b/.env.prod
@@ -8,13 +8,14 @@ CORS_ORIGIN="*" # Allowed CORS origin, adjust as necessary
 
 # Rate Limiting
 COMMON_RATE_LIMIT_WINDOW_MS="1000" # Window size for rate limiting (ms)
-COMMON_RATE_LIMIT_MAX_REQUESTS="20" # Max number of requests per window per IP
+COMMON_RATE_LIMIT_MAX_REQUESTS="200" # Max number of requests per window per IP
 
 
 # AWS
 AWS_ACCESS_KEY_ID="AKIAZQ3DN5G2LYF2IMPC"
 AWS_SECRET_ACCESS_KEY="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"
 AWS_DEFAULT_REGION="us-east-1"
+AWS_S3_BUCKET_NAME="crnamethod"
 
 # Cognito
 USER_POOL_ID="us-east-1_q6gZwQJ8z"
