--- a/.env.prod
+++ b/.env.prod
@@ -15,14 +15,14 @@ COMMON_RATE_LIMIT_MAX_REQUESTS="200" # Max number of requests per window per IP
 AWS_ACCESS_KEY_ID="AKIAZQ3DN5G2LYF2IMPC"
 AWS_SECRET_ACCESS_KEY="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"
 AWS_DEFAULT_REGION="us-east-1"
-AWS_S3_BUCKET_NAME="crnamethod"
+AWS_S3_BUCKET="crnamethod"
 
 # Cognito
 USER_POOL_ID="us-east-1_q6gZwQJ8z"
 COGNITO_CLIENT_ID="32i9qeq56omteano2r27rbdbuv"
 
 # Tables
-DYNAMODB_TBL_SCHOOLS="DevSchools"
+DYNAMODB_TBL_SCHOOLS="DevSchools-OLD"
 DYNAMODB_TBL_REVIEWS="Reviews"
 DYNAMODB_TBL_USERPROFILE="UserProfile"
 DYNAMODB_TBL_USERFAVORITES="UserFavorites"
