refactor: remove schools new

--- a/.env.development
+++ b/.env.development
@@ -21,7 +21,7 @@ USER_POOL_ID="us-east-1_UcZFS65om"
 COGNITO_CLIENT_ID="2nn56p2ugr1jgbgrbpkrud35q6"
 
 # Tables
-DYNAMODB_TBL_SCHOOLS_NEW="DevSchools"
+DYNAMODB_TBL_SCHOOLS="DevSchools"
 DYNAMODB_TBL_PREREQUISITES="DevPrerequisite"
 DYNAMODB_TBL_PREREQUISITE_SCHOOLS="DevPrerequisiteSchools"
 
