--- a/.env.development
+++ b/.env.development
@@ -8,20 +8,20 @@ CORS_ORIGIN="*" # Allowed CORS origin, adjust as necessary
 
 # Rate Limiting
 COMMON_RATE_LIMIT_WINDOW_MS="120000" # 120 seconds
-COMMON_RATE_LIMIT_MAX_REQUESTS="1000" # 500 requests per window per IP
+COMMON_RATE_LIMIT_MAX_REQUESTS="2000"
 
 # AWS
 AWS_ACCESS_KEY_ID="AKIAZQ3DN5G2LYF2IMPC"
 AWS_SECRET_ACCESS_KEY="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"
 AWS_DEFAULT_REGION="us-east-1"
-AWS_S3_BUCKET="crnamethod"
+AWS_S3_BUCKET="crnamethod-dev"
 
 # Cognito
 USER_POOL_ID="us-east-1_UcZFS65om"
 COGNITO_CLIENT_ID="2nn56p2ugr1jgbgrbpkrud35q6"
 
 # Tables
-DYNAMODB_TBL_SCHOOLS="DevSchools"
+DYNAMODB_TBL_SCHOOLS="TestSchools"
 DYNAMODB_TBL_PREREQUISITES="DevPrerequisite"
 DYNAMODB_TBL_PREREQUISITE_SCHOOLS="DevPrerequisiteSchools"
 
