--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,5 @@
 # Environment Configuration
-NODE_ENV="development" # Options: 'development', 'production'
+NODE_ENV="production"
 PORT="8080"            # The port your server will listen on
 HOST="localhost"       # Hostname for the server
 
@@ -7,9 +7,8 @@ HOST="localhost"       # Hostname for the server
 CORS_ORIGIN="*" # Allowed CORS origin, adjust as necessary
 
 # Rate Limiting
-COMMON_RATE_LIMIT_WINDOW_MS="1000" # Window size for rate limiting (ms)
-COMMON_RATE_LIMIT_MAX_REQUESTS="200" # Max number of requests per window per IP
-
+COMMON_RATE_LIMIT_WINDOW_MS="60000" # Window size for rate limiting (ms)
+COMMON_RATE_LIMIT_MAX_REQUESTS="2000" # Max number of requests per window per IP
 
 # AWS
 AWS_ACCESS_KEY_ID="AKIAZQ3DN5G2LYF2IMPC"
