--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "lodash": "^4.17.21",
     "pino-http": "^10.0.0",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^10.0.0",
@@ -44,6 +45,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-fileupload": "^1.5.1",
+    "@types/lodash": "^4.17.13",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "husky": "^9.0.11",
