--- a/.env.prod
+++ b/.env.prod
@@ -13,6 +13,8 @@ COMMON_RATE_LIMIT_MAX_REQUESTS="2000" # Max number of requests per window per IP
 # AWS
 AWS_ACCESS_KEY_ID="AKIAZQ3DN5G2LYF2IMPC"
 AWS_SECRET_ACCESS_KEY="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"
+AWS_S3_ACCESS_KEY_ID="AKIAZQ3DN5G2I5QICA4X"
+AWS_S3_SECRET_ACCESS_KEY="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"
 AWS_DEFAULT_REGION="us-east-1"
 AWS_S3_BUCKET="crnamethod"
 
