--- a/.env.old
+++ b/.env.old
@@ -7,8 +7,8 @@ HOST="localhost"       # Hostname for the server
 CORS_ORIGIN="*" # Allowed CORS origin, adjust as necessary
 
 # Rate Limiting
-COMMON_RATE_LIMIT_WINDOW_MS="120000"
-COMMON_RATE_LIMIT_MAX_REQUESTS="2000"
+COMMON_RATE_LIMIT_WINDOW_MS="60000" # Window size for rate limiting (ms)
+COMMON_RATE_LIMIT_MAX_REQUESTS="2000" # Max number of requests per window per IP
 
 # AWS
 AWS_ACCESS_KEY_ID="AKIAZQ3DN5G2LYF2IMPC"
@@ -19,18 +19,13 @@ AWS_DEFAULT_REGION="us-east-1"
 AWS_S3_BUCKET="crnamethod"
 
 # Cognito
-USER_POOL_ID="us-east-1_UcZFS65om"
-COGNITO_CLIENT_ID="2nn56p2ugr1jgbgrbpkrud35q6"
+USER_POOL_ID="us-east-1_q6gZwQJ8z"
+COGNITO_CLIENT_ID="32i9qeq56omteano2r27rbdbuv"
 
 # Tables
-DYNAMODB_TBL_SCHOOLS="DevSchools"
-DYNAMODB_TBL_PREREQUISITES="DevPrerequisite"
-DYNAMODB_TBL_PREREQUISITE_SCHOOLS="DevPrerequisiteSchools"
-
+DYNAMODB_TBL_SCHOOLS="DevSchools-OLD"
+DYNAMODB_TBL_REVIEWS="Reviews"
+DYNAMODB_TBL_USERPROFILE="UserProfile"
+DYNAMODB_TBL_USERFAVORITES="UserFavorites"
 DYNAMODB_TBL_CLINICS="DevClinics"
 DYNAMODB_TBL_CLINIC_REVIEWS="DevClinicReviews"
-
-DYNAMODB_TBL_REVIEWS="DevReviews"
-
-DYNAMODB_TBL_USERPROFILE="DevUserProfile"
-DYNAMODB_TBL_USERFAVORITES="DevUserFavorites"
