--- a/.env.prod
+++ b/.env.prod
@@ -32,5 +32,5 @@ DYNAMODB_TBL_CLINIC_REVIEWS="DevClinicReviews"
 
 DYNAMODB_TBL_REVIEWS="DevReviews"
 
-DYNAMODB_TBL_USERPROFILE="DevUserProfile"
-DYNAMODB_TBL_USERFAVORITES="DevUserFavorites"
+DYNAMODB_TBL_USERPROFILE="UserProfile"
+DYNAMODB_TBL_USERFAVORITES="UserFavorites"
