--- a/.env.prod
+++ b/.env.prod
@@ -8,7 +8,7 @@ CORS_ORIGIN="*" # Allowed CORS origin, adjust as necessary
 
 # Rate Limiting
 COMMON_RATE_LIMIT_WINDOW_MS="120000"
-COMMON_RATE_LIMIT_MAX_REQUESTS="2000"
+COMMON_RATE_LIMIT_MAX_REQUESTS="50000"
 
 # AWS
 AWS_ACCESS_KEY_ID="AKIAZQ3DN5G2LYF2IMPC"
@@ -24,6 +24,7 @@ COGNITO_CLIENT_ID="2nn56p2ugr1jgbgrbpkrud35q6"
 
 # Tables
 DYNAMODB_TBL_SCHOOLS="DevSchools"
+DYNAMODB_TBL_SCHOOL_CLINICS="DevSchoolClinics"
 DYNAMODB_TBL_PREREQUISITES="DevPrerequisite"
 DYNAMODB_TBL_PREREQUISITE_SCHOOLS="DevPrerequisiteSchools"
 
