chore: change table reviews

--- a/.env.prod
+++ b/.env.prod
@@ -31,7 +31,7 @@ DYNAMODB_TBL_PREREQUISITE_SCHOOLS="DevPrerequisiteSchools"
 DYNAMODB_TBL_CLINICS="DevClinics"
 DYNAMODB_TBL_CLINIC_REVIEWS="DevClinicReviews"
 
-DYNAMODB_TBL_REVIEWS="DevReviews"
+DYNAMODB_TBL_REVIEWS="Reviews"
 
 DYNAMODB_TBL_USERPROFILE="UserProfile"
 DYNAMODB_TBL_USERFAVORITES="UserFavorites"
