chore: change  clinic reviews table

--- a/.env.prod
+++ b/.env.prod
@@ -29,7 +29,7 @@ DYNAMODB_TBL_PREREQUISITES="DevPrerequisite"
 DYNAMODB_TBL_PREREQUISITE_SCHOOLS="DevPrerequisiteSchools"
 
 DYNAMODB_TBL_CLINICS="DevClinics"
-DYNAMODB_TBL_CLINIC_REVIEWS="DevClinicReviews"
+DYNAMODB_TBL_CLINIC_REVIEWS="ClinicReviews"
 
 DYNAMODB_TBL_REVIEWS="Reviews"
 
