chore: update env prerequiste table name

--- a/.env.prod
+++ b/.env.prod
@@ -25,8 +25,8 @@ COGNITO_CLIENT_ID="2nn56p2ugr1jgbgrbpkrud35q6"
 # Tables
 DYNAMODB_TBL_SCHOOLS="DevSchools"
 DYNAMODB_TBL_SCHOOL_CLINICS="DevSchoolClinics"
-DYNAMODB_TBL_PREREQUISITES="DevPrerequisite"
-DYNAMODB_TBL_PREREQUISITE_SCHOOLS="DevPrerequisiteSchools"
+DYNAMODB_TBL_PREREQUISITES="Prerequisites"
+DYNAMODB_TBL_PREREQUISITE_SCHOOLS="PrerequisiteSchools"
 
 DYNAMODB_TBL_CLINICS="DevClinics"
 DYNAMODB_TBL_CLINIC_REVIEWS="ClinicReviews"
